photos and assets

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Santiago Sepúlveda",
-  "name": "Santiago Sepúlveda",
+  "short_name": "Brian",
+  "name": "Brian Valiente Rodenas",
   "icons": [
     {
       "src": "favicon1.ico",
